--- a/css/insides.css
+++ b/css/insides.css
@@ -1715,6 +1715,89 @@ textarea.input__target {
     flex: 0 1 11.25rem;
 }
 
+.data-check {
+    --clr: var(--base-rich-black, #053969);
+    padding: 0 0 40px 0;
+}
+
+@media (min-width: 768px) {
+    .data-check {
+        padding: 0 0 70px 0;
+    }
+}
+
+@media (min-width: 1200px) {
+    .data-check {
+        padding: 0 0 100px 0;
+    }
+}
+
+.data-check__wrapper {
+    max-width: 23.75rem;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.data-check__status {
+    width: 100%;
+    height: 0;
+    padding: 0 0 100% 0;
+    position: relative;
+}
+
+.data-check__video {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.data-check__percent {
+    display: block;
+    font-size: 2.688rem;
+    line-height: 1.256;
+ /* 125% */
+    text-align: center;
+    color: var(--clr);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -50%, 0);
+}
+
+.data-check__title {
+    margin: -2rem 0 0.5rem 0;
+    display: block;
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 1.333;
+ /* 133.333% */
+    text-align: center;
+    color: var(--clr);
+    position: relative;
+    z-index: 2;
+}
+
+@media (min-width: 768px) {
+    .data-check__title {
+        margin: -2rem 0 0.75rem 0;
+        font-size: 1.875rem;
+    }
+}
+
+.data-check__subtitle {
+    display: block;
+    font-size: 0.75rem;
+    line-height: 1.417;
+ /* 141.667% */
+    text-align: center;
+    color: var(--clr);
+}
+
 .popup-layout {
     width: 100%;
     height: 100%;
