--- a/css/insides.css
+++ b/css/insides.css
@@ -219,6 +219,7 @@ body.no-scroll {
     cursor: pointer;
     font-size: var(--fs);
     font-style: normal;
+    text-align: center;
     font-weight: 500;
     line-height: 1.2;
  /* 150% */
@@ -947,14 +948,16 @@ body.no-scroll {
 .input__icon {
     width: var(--icon-size);
     height: var(--icon-size);
-    fill: transparent;
-    stroke: var(--icon-clr);
-    stroke-width: 1.5;
-    stroke-linecap: round;
-    stroke-linejoin: round;
     pointer-events: none;
     position: relative;
     z-index: 1;
+}
+
+.input__icon img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: contain;
+    object-fit: contain;
 }
 
 .input__icon:first-child {
@@ -965,7 +968,15 @@ body.no-scroll {
     margin: 0 0 0 var(--icon-indent);
 }
 
-.input__icon[data-visible-pass-btn] {
+svg.input__icon {
+    fill: transparent;
+    stroke: var(--icon-clr);
+    stroke-width: 1.5;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+}
+
+svg.input__icon[data-visible-pass-btn] {
     cursor: pointer;
     fill: var(--icon-clr);
     stroke: none;
@@ -973,7 +984,7 @@ body.no-scroll {
     transition: fill var(--duration) linear;
 }
 
-.input__icon[data-visible-pass-btn].active {
+svg.input__icon[data-visible-pass-btn].active {
     fill: var(--icon-clr-active);
 }
 
@@ -1563,6 +1574,176 @@ textarea.input__target {
     <div class="autocomplete-suggestion">...</div>
 </div>
 */
+.offer__wrapper {
+    height: 100%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-radius: 12px;
+    background: var(--base-cristal-white, #fff);
+}
+
+@media (min-width: 768px) {
+    .offer__wrapper {
+        padding: 20px;
+    }
+}
+
+.offer__logo {
+    height: 60px;
+    margin: 0 0 10px 0;
+}
+
+.offer__logo img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: contain;
+    object-fit: contain;
+}
+
+@media (max-width: 576px) {
+    .offer__logo {
+        max-width: 160px;
+        height: 55px;
+    }
+}
+
+@media (max-width: 576px) {
+    .offer__body {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.offer__info {
+    flex: 0 0 6.875rem;
+    margin: 0 10px 0 0;
+    display: flex;
+    flex-direction: column;
+}
+
+@media (min-width: 576px) {
+    .offer__info {
+        margin: 0 0 10px 0;
+        align-items: center;
+    }
+}
+
+.offer__discount {
+    min-height: 1.455em;
+    padding: 0.182em 0.727em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.688rem;
+    font-weight: 500;
+    text-align: center;
+    line-height: 1;
+    color: var(--brandbook-more, #f22a52);
+    border-radius: 0.727em;
+    background: rgba(242, 42, 82, 0.14);
+}
+
+.offer__sum {
+    display: block;
+    font-family: "Inter";
+    font-size: 1rem;
+    text-align: center;
+    font-weight: 600;
+    color: var(--base-rich-black, #053969);
+}
+
+@media (max-width: 576px) {
+    .offer__sum {
+        align-self: flex-end;
+    }
+}
+
+@media (min-width: 768px) {
+    .offer__sum {
+        font-size: 1.375rem;
+    }
+}
+
+@media (max-width: 576px) {
+    .offer__button {
+        align-self: flex-start;
+        flex: 0 1 10.625rem;
+    }
+}
+
+.insides {
+    --gap: 15px;
+}
+
+.insides .main-block {
+    max-width: 26.875rem;
+}
+
+.insides__form {
+    display: grid;
+    gap: var(--gap);
+}
+
+.insides__group {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: var(--gap);
+}
+
+.insides__input_center input {
+    text-align: center;
+}
+
+.insides__footer {
+    display: grid;
+    gap: var(--gap);
+}
+
+.insides__footer .insides__action {
+    grid-row: 2/3;
+}
+
+@media (min-width: 450px) {
+    .insides__footer {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .insides__footer .insides__action {
+        grid-row: auto;
+        text-align: left;
+        justify-content: flex-start;
+        font-weight: 400;
+    }
+}
+
+@media (min-width: 576px) {
+    .insides__footer .insides__action {
+        font-size: 0.875rem;
+    }
+}
+
+.insides__action {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    font-size: 1rem;
+    text-decoration: underline;
+    font-weight: 500;
+    text-align: center;
+    color: var(--base-rich-black, #053969);
+}
+
+@media (any-hover: hover) {
+    .insides__action:hover {
+        text-decoration: none;
+    }
+}
+
 .contact-info {
     --gap: 15px;
 }
@@ -1796,6 +1977,84 @@ textarea.input__target {
  /* 141.667% */
     text-align: center;
     color: var(--clr);
+}
+
+.get-offers {
+    padding: 10px 0 40px 0;
+}
+
+@media (min-width: 768px) {
+    .get-offers {
+        padding: 10px 0 70px 0;
+    }
+}
+
+@media (min-width: 1200px) {
+    .get-offers {
+        padding: 10px 0 100px 0;
+    }
+}
+
+.get-offers__wrapper {
+    max-width: 21.875rem;
+    margin: 0 auto;
+}
+
+@media (min-width: 576px) {
+    .get-offers__wrapper {
+        max-width: 45.625rem;
+    }
+}
+
+.get-offers__title {
+    text-align: left;
+}
+
+@media (min-width: 576px) {
+    .get-offers__title {
+        max-width: 22.5rem;
+        margin: 0 auto;
+        text-align: center;
+    }
+}
+
+.get-offers__items {
+    display: grid;
+    grid-auto-rows: 1fr;
+    gap: 10px;
+}
+
+@media (min-width: 576px) {
+    .get-offers__items {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 768px) {
+    .get-offers__items {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+    }
+}
+
+.get-offers__more {
+    --bg: var(--gray-gray-20, #f0f1ed);
+    --bg-hover: rgba(255, 255, 255, 0.4);
+    margin: 15px 0 0 0;
+    border: 1px solid var(--base-rich-black, #053969);
+}
+
+@media (min-width: 450px) {
+    .get-offers__more {
+        max-width: 16.875rem;
+        margin: 20px auto 0 auto;
+    }
+}
+
+@media (min-width: 768px) {
+    .get-offers__more {
+        max-width: 15.625rem;
+    }
 }
 
 .popup-layout {
