--- a/css/insides.css
+++ b/css/insides.css
@@ -270,6 +270,11 @@ body.no-scroll {
     }
 }
 
+.button_light {
+    --bg: var(--buttons-white, #fff);
+    --bg-hover: var(--gray-gray-40, #bcbccc);
+}
+
 .button_secondary {
     --height: 2.5rem;
     --fs: 0.875rem;
@@ -1673,6 +1678,51 @@ textarea.input__target {
     }
 }
 
+.feedback {
+    --gap: 15px;
+}
+
+.feedback .main-block {
+    max-width: 45.625rem;
+}
+
+.feedback__form {
+    display: grid;
+    gap: var(--gap);
+}
+
+.feedback__group {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(12.5rem, 1fr));
+    gap: var(--gap);
+}
+
+.feedback__footer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: var(--gap);
+}
+
+@media (min-width: 576px) {
+    .feedback__footer {
+        flex-direction: row;
+    }
+}
+
+@media (min-width: 450px) {
+    .feedback__submit {
+        max-width: 13.75rem;
+    }
+}
+
+@media (min-width: 576px) {
+    .feedback__submit {
+        flex: 0 1 11.25rem;
+    }
+}
+
 .insides {
     --gap: 15px;
 }
@@ -2055,6 +2105,106 @@ textarea.input__target {
     .get-offers__more {
         max-width: 15.625rem;
     }
+}
+
+.not-found {
+    --gap: 15px;
+    padding: 10px 0 40px 0;
+}
+
+@media (min-width: 768px) {
+    .not-found {
+        padding: 10px 0 70px 0;
+    }
+}
+
+@media (min-width: 1200px) {
+    .not-found {
+        padding: 10px 0 100px 0;
+    }
+}
+
+.not-found__wrapper {
+    max-width: 31.563rem;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: minmax(6.25rem, 9.375rem) minmax(120px, 150px);
+    justify-content: center;
+    gap: var(--gap);
+}
+
+@media (min-width: 576px) {
+    .not-found__wrapper {
+        grid-template-columns: 13.125rem minmax(120px, 195px);
+        justify-content: space-between;
+    }
+}
+
+@media (min-width: 768px) {
+    .not-found__wrapper {
+        grid-template-columns: 11.875rem minmax(120px, 195px);
+    }
+}
+
+.not-found__title {
+    align-self: center;
+}
+
+.not-found__title h2 {
+    margin: 0 0 0.625rem 0;
+    display: block;
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 1.1;
+ /* 110% */
+    color: var(--base-rich-black, #053969);
+}
+
+.not-found__title span {
+    display: block;
+    font-size: 0.75rem;
+    line-height: 1.667;
+ /* 166.667% */
+    color: var(--base-rich-black, #053969);
+}
+
+@media (min-width: 576px) {
+    .not-found__title {
+        align-self: end;
+    }
+
+    .not-found__title h2 {
+        font-size: 2.5rem;
+    }
+}
+
+.not-found__image {
+    align-self: center;
+}
+
+.not-found__image img {
+    width: 100%;
+}
+
+@media (min-width: 576px) {
+    .not-found__image {
+        grid-column: 2/3;
+        grid-row: 1/3;
+    }
+}
+
+.not-found__actions {
+    grid-column: 1/3;
+}
+
+@media (min-width: 576px) {
+    .not-found__actions {
+        grid-column: auto;
+    }
+}
+
+.not-found__action:not(:last-child) {
+    margin: 0 0 var(--gap) 0;
 }
 
 .popup-layout {
