--- a/css/profile.css
+++ b/css/profile.css
@@ -1878,24 +1878,30 @@ textarea.input__target {
     height: 14.063rem;
     margin: 0 auto 15px auto;
     position: relative;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 @media (min-width: 576px) {
     .scoring__points {
-        width: 60%;
-        max-width: 225px;
-        max-height: 225px;
-        height: 0;
-        padding: 0 0 54.22% 0;
+        width: 12.5rem;
+        height: 12.5rem;
     }
 }
 
 @media (min-width: 992px) {
     .scoring__points {
-        flex: 0 1 14.063rem;
+        flex: 0 0 11.875rem;
+        height: 11.875rem;
         width: auto;
-        padding: 0 0 54.22% 0;
         margin: 0 15px 0 0;
+    }
+}
+
+@media (min-width: 1200px) {
+    .scoring__points {
+        flex: 0 0 14.063rem;
+        height: 14.063rem;
     }
 }
 
