--- a/css/insides.css
+++ b/css/insides.css
@@ -1983,6 +1983,7 @@ textarea.input__target {
     padding: 0 0 100% 0;
     position: relative;
     overflow: hidden;
+    border-radius: 50%;
 }
 
 .data-check__video {
