--- a/css/insides.css
+++ b/css/insides.css
@@ -1952,6 +1952,24 @@ textarea.input__target {
     flex: 0 1 11.25rem;
 }
 
+*::-webkit-media-controls-panel {
+    display: none !important;
+    -webkit-appearance: none;
+}
+
+/* Old shadow dom for play button */
+*::-webkit-media-controls-play-button {
+    display: none !important;
+    -webkit-appearance: none;
+}
+
+/* New shadow dom for play button */
+/* This one works! */
+*::-webkit-media-controls-start-playback-button {
+    display: none !important;
+    -webkit-appearance: none;
+}
+
 .data-check {
     --clr: var(--base-rich-black, #053969);
 }
