--- a/css/insides.css
+++ b/css/insides.css
@@ -1952,91 +1952,82 @@ textarea.input__target {
     flex: 0 1 11.25rem;
 }
 
-*::-webkit-media-controls-panel {
-    display: none !important;
-    -webkit-appearance: none;
-}
-
-/* Old shadow dom for play button */
-*::-webkit-media-controls-play-button {
-    display: none !important;
-    -webkit-appearance: none;
-}
-
-/* New shadow dom for play button */
-/* This one works! */
-*::-webkit-media-controls-start-playback-button {
-    display: none !important;
-    -webkit-appearance: none;
-}
-
 .data-check {
     --clr: var(--base-rich-black, #053969);
+    padding: 0 0 40px 0;
 }
 
-.data-check .main-block {
-    max-width: 37.5rem;
+@media (min-width: 768px) {
+    .data-check {
+        padding: 0 0 70px 0;
+    }
 }
 
-.data-check__head {
-    max-width: 10.625rem;
+@media (min-width: 1200px) {
+    .data-check {
+        padding: 0 0 100px 0;
+    }
+}
+
+.data-check__wrapper {
+    max-width: 23.75rem;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-@media (min-width: 576px) {
-    .data-check__head {
-        max-width: 12.5rem;
-    }
-}
-
-@media (min-width: 768px) {
-    .data-check__head {
-        max-width: 14.375rem;
-    }
-}
-
-@media (min-width: 1200px) {
-    .data-check__head {
-        max-width: 16.875rem;
-    }
-}
-
 .data-check__status {
     width: 100%;
-    height: 0;
-    padding: 0 0 100% 0;
+    max-width: 18.75rem;
     position: relative;
-    overflow: hidden;
-    border-radius: 50%;
 }
 
-.data-check__video {
-    width: 150%;
-    height: 150%;
+.data-check__status.checked .data-check__percent {
+    opacity: 0;
+    visibility: hidden;
+    transition-delay: 0.5s;
+}
+
+.data-check__status.checked .data-check__checked {
+    opacity: 1;
+    visibility: visible;
+    transform: translate3d(-50%, -50%, 0) scale(1);
+    transition-delay: 0.5s;
+}
+
+.data-chekc__bar {
     display: block;
+    transform: rotate(-90deg);
+}
+
+.data-chekc__bar svg {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+.data-check__circle {
+    transition: stroke-dasharray 0.1s linear;
+}
+
+.data-check__percent,
+.data-check__checked {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate3d(-50%, -50%, 0);
-    outline: none;
-    border: none;
-    background: none;
+    transition-property: opacity, visibility, transform;
+    transition-duration: 0.2s;
 }
 
 .data-check__percent {
     display: block;
-    font-size: 1.875rem;
+    font-size: 2rem;
     line-height: 1.256;
  /* 125% */
     text-align: center;
     color: var(--clr);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, -50%, 0);
 }
 
 @media (min-width: 768px) {
@@ -2045,8 +2036,33 @@ textarea.input__target {
     }
 }
 
+.data-check__checked {
+    width: 7.5rem;
+    height: 7.5rem;
+    opacity: 0;
+    visibility: hidden;
+    transform: translate3d(-50%, -50%, 0) scale(1.3);
+}
+
+.data-check__checked svg {
+    width: 100%;
+    height: 100%;
+    fill: transparent;
+    stroke: var(--clr);
+    stroke-width: 2;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+}
+
+@media (min-width: 768px) {
+    .data-check__checked {
+        width: 9.375rem;
+        height: 9.375rem;
+    }
+}
+
 .data-check__title {
-    margin: 1.25rem 0 0.5rem 0;
+    margin: 0.938rem 0 0.5rem 0;
     display: block;
     font-size: 1.5rem;
     font-weight: 600;
@@ -2060,7 +2076,7 @@ textarea.input__target {
 
 @media (min-width: 768px) {
     .data-check__title {
-        margin: 0.938rem 0 0.75rem 0;
+        margin: 1.25rem 0 0.75rem 0;
         font-size: 1.875rem;
     }
 }
