--- a/css/insides.css
+++ b/css/insides.css
@@ -1986,7 +1986,8 @@ textarea.input__target {
 .data-check__status.checked .data-check__percent {
     opacity: 0;
     visibility: hidden;
-    transition-delay: 0.5s;
+    transition-delay: 0.3s;
+    transform: translate3d(-50%, calc(-50% + 30px), 0) scale(0.8);
 }
 
 .data-check__status.checked .data-check__checked {
@@ -2016,9 +2017,8 @@ textarea.input__target {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate3d(-50%, -50%, 0);
     transition-property: opacity, visibility, transform;
-    transition-duration: 0.2s;
+    transition-duration: 0.5s;
 }
 
 .data-check__percent {
@@ -2028,6 +2028,7 @@ textarea.input__target {
  /* 125% */
     text-align: center;
     color: var(--clr);
+    transform: translate3d(-50%, -50%, 0);
 }
 
 @media (min-width: 768px) {
@@ -2041,7 +2042,7 @@ textarea.input__target {
     height: 7.5rem;
     opacity: 0;
     visibility: hidden;
-    transform: translate3d(-50%, -50%, 0) scale(1.3);
+    transform: translate3d(-50%, calc(-50% - 30px), 0) scale(1.2);
 }
 
 .data-check__checked svg {
